@@ -2,7 +2,7 @@
   "name": "Kalamar",
   "description": "Mojolicious-based Frontend for KorAP",
   "license": "BSD-2-Clause",
-  "version": "0.28.1",
+  "version": "0.28.2",
   "pluginVersion": "0.1",
   "repository" : {
     "type": "git",
