@@ -9,6 +9,7 @@
         - Make close in match view to minimize.
         - Add minimize button to VC.
         - Make unspecified values in VC a button.
+        - Fixed KoralQuery view to correctly update session.
 
 0.27 2018-07-23
         - Introduced content blocks to create
